--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700");
-/*!
- * bootswatch v3.3.7
- * Homepage: http://bootswatch.com
- * Copyright 2012-2017 Thomas Park
- * Licensed under MIT
- * Based on Bootstrap
-*/
-/*!
- * Bootstrap v3.3.7 (http://getbootstrap.com)
- * Copyright 2011-2016 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
-/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+
 html {
-  font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
-/*div{
-  border: 1px solid red}
-}*/
+div{
+  background-color: black;
+/*  border: 1px solid red}*/
+}
 #easyButton{
   display:none;
 }
@@ -29,43 +17,34 @@ html {
 #hardButton{
   display: none;
 }
+#guess{
+  color: transparent;
+}
 .full{
   color: yellow;
 }
 
-.pickedLetters{
+#pickedLetters{
   width: auto;
   text-align: center;
 vertical-align: middle;
+border-top: 1px dashed yellow;
+padding: 10px;
 }
 
-h2{  
-
-  letter-spacing: 5px;
-  opacity: 0.8;
-
+#buttons{
+    position:fixed;bottom:0;
 }
-
-h3{  
-
-  letter-spacing: 5px;
-  opacity: 0.8;
-}
-
-body {
-  margin: 0;
-
-}
+  
 #toggle{
-  position:absolute;bottom:0;
+  position:fixed;bottom:0;
 }
+
 .dye{
     background-image: url("../images/DYE.gif");
 }
 .container{
-  background-color: black;
-  opacity: 0.8;
-  height: 710px;
+  height: auto;
 
 }
 article,
@@ -1134,11 +1113,11 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
   font-size: 14px;
   line-height: 1.42857143;
   color: #839496;
-  background-color: #002b36;
+  background-color: black;
 }
 input,
 button,
@@ -1583,7 +1562,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+
 }
 code {
   padding: 2px 4px;
@@ -1660,10 +1639,7 @@ pre code {
   padding-left: 15px;
   padding-right: 15px;
 }
-.row {
-  margin-left: -15px;
-  margin-right: -15px;
-}
+
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
   min-height: 1px;
@@ -6042,7 +6018,6 @@ button.close {
   position: absolute;
   z-index: 1070;
   display: block;
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
@@ -6160,7 +6135,6 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
@@ -6904,4 +6878,54 @@ table .danger th,
 .input-group-addon {
   color: #839496;
 }
+h1{
+  font-size: 90px;
+}
+h2{  
+
+  letter-spacing: 8px;
+font-family: 'Permanent Marker', cursive;
+
+
+}
+
+h3{  
+
+letter-spacing: 8px;
+font-family: 'Permanent Marker', cursive;
+background-color: black;
+color: yellow;
+}
+
+body {
+  margin: 0;
+font-family: 'Permanent Marker', cursive;
+
+}
+#guess{
+  color: transparent;
+}
+html, button:hover {cursor: url(http://cur.cursors-4u.net/mechanics/mec-2/mec101.cur), progress !important;}
+.floatLeft{
+  float: left;
+}
+.floatRight{
+  float: right;
+}
+
+img.music{
+  height: auto;
+  width: 100%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.row {
+  margin-left: -15px;
+  margin-right: -15px;
+  background-color: black;
+}
+
+
+
 
